<resources>
    <string name="app_name">Employee Management</string>
    <string name="loginAdmin">Log in as a Administrator</string>
    <string name="loginEmp">Log in as an Employee</string>
    <string name="adminHeading">Administrator Login</string>
    <string name="adminUsername">Username</string>
    <string name="adminPassword">Password</string>
    <string name="login">Sign In</string>
    <string name="empHeading">Employee Login</string>
    <string name="addEmp">Add Employee</string>
    <string name="removeEmp">remove Employee</string>
    <string name="changePassword">Change Employee Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="wage">Wage</string>
    <string name="submit">Submit</string>
    <string name="empID">Employee ID</string>
    <string name="searchButton">Search</string>
    <string name="searchBy">Search By:</string>
    <string name="del">Delete</string>
    <string-array name="option">
        <item>Name</item>
        <item>Employee ID</item>
    </string-array>
    <string-array name="province">
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>
    <string name="update">Update</string>
    <string name="view">View Detail</string>
    <string name="deleteupdateview">Delete/Update/View Employee</string>
    <string name="streetName">Street Name</string>
    <string name="streetNumber">Street Number</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="viewImage">View/Update Image</string>
    <string name="takePhoto">Take Photo</string>
    <string name="upload">Choose Photo</string>
    <string name="wageCalculator">Wage Calculator</string>
    <string name="calculate">Calculate Wage</string>
    <string name="hours">Hours Worked in Week</string>
    <string name="name">Name</string>
    <string name="wagePerHour">Wage(Per Hour)</string>
    <string name="grossPay">Gross Pay</string>
    <string name="taxes">Taxes</string>
    <string name="ei">EI</string>
    <string name="netPay">Net Pay</string>
    <string name="forgotPassword">Forgot Password</string>
</resources>
